--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -210,7 +210,7 @@ steps:
     else
       echo "Trigger came from aha repo; use default config";
     fi;
-  - aha regress $$CONFIG --daemon auto
+  - aha regress $$CONFIG --daemon auto --include-dense-only-tests
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
