--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -35,7 +35,6 @@ steps:
         git remote set-url origin https://github.com/StanfordAHA/aha     # Why?
         git clean -ffxdq
         set +x
-
         bin=$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin
 
         # Make sure env var BUILDKITE_PULL_REQUEST_REPO is set correctly
@@ -157,12 +156,19 @@ steps:
           # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
 
           # env file sets REQUEST_TYPE to one of "AHA_PUSH", "AHA_PR", or "SUBMOD_PR"
+          # also sets "PR_TAIL_REPO" to requesting submod e.g. "garnet"
+          set -x; cat /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER; set +x
           source /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER
 
           echo "--- Pass DO_PR info to docker"
           echo "Info gets passed to docker by mounting temp dir as /buildkite omg omg"
           if [ "$$REQUEST_TYPE" == "SUBMOD_PR" ]; then
               echo "+++ SET DO_PR"; mkdir -p temp; touch temp/DO_PR
+              if [ "$$PR_REPO_TAIL" == "garnet" ]; then
+                  # Delete .TEST as a sign to skip tests
+                  echo "+++ Garnet PR detected, so skip redundant regressions"
+                  rm -rf temp/.TEST
+              fi
           else
               echo "+++ UNSET DO_PR"; /bin/rm -rf temp/DO_PR
           fi
@@ -186,6 +192,11 @@ steps:
           ~/bin/status-update success
 
   commands:
+  - |
+    if ! test -e /buildkite/.TEST; then
+        echo "+++ No .TEST detected, so skip redundant regressions"
+        exit
+    fi
   - |
     if test -e /buildkite/DO_PR; then
         echo "--- DO_PR SET (TRUE)"
