huh why were .buildkite files not included in docker?

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,10 @@
 # Docker
-.buildkite
+# 04/2024 steveri: removed .buildkite from list below, it has binaries that we need...?
+# Also: not sure why small hidden files like .dependabot and .dockerignore are included anyway...?
+#.buildkite
+Dockerfile
 .dependabot
 .github
-Dockerfile
 .dockerignore
 .gitignore
 *.md
