testing new failure mode...

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -100,8 +100,12 @@ steps:
   depends_on: "docker-build"
   # Set soft_fail so that failing gold check does not fail pipeline.
   soft_fail: true
-  commands:
-    - set -x; /aha/.buildkite/bin/rtl-goldcheck.sh amber
+  commands: |
+    echo "/aha/.buildkite/bin/rtl-goldcheck.sh amber"
+    if ! /aha/.buildkite/bin/rtl-goldcheck.sh amber; then
+        msg="Amber gold check FAILED. This is not fatal. But it really should be fixed."
+        echo "$$msg" | buildkite-agent annotate --style "error"
+    fi
   plugins:
     - uber-workflow/run-without-clone:
     - docker#v3.2.0:
@@ -122,8 +126,12 @@ steps:
   depends_on: "docker-build"
   # Set soft_fail so that failing gold check does not fail pipeline.
   soft_fail: true
-  commands:
-    - set -x; /aha/.buildkite/bin/rtl-goldcheck.sh onyx
+  commands: |
+    echo "/aha/.buildkite/bin/rtl-goldcheck.sh onyx"
+    if ! /aha/.buildkite/bin/rtl-goldcheck.sh onyx; then
+        msg="Onyx gold check FAILED. This is not fatal. But it really should be fixed."
+        echo "$$msg" | buildkite-agent annotate --style "error"
+    fi
   plugins:
     - uber-workflow/run-without-clone:
     - docker#v3.2.0:
