--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,14 +10,14 @@ steps:
   commands: |
         msg="Amber gold check FAILED. This is not fatal. But it really should be fixed."
         echo "++ $$msg"
-        echo "$$msg" | buildkite-agent annotate --style "error"
+        echo "$$msg" | buildkite-agent annotate --style "error" --append
 
 
 - label: "TEST2"
   commands: |
         msg="TEST2 gold check FAILED. This is not fatal. But it really should be fixed."
         echo "++ $$msg"
-        echo "$$msg" | buildkite-agent annotate --style "error"
+        echo "$$msg" | buildkite-agent annotate --style "error" --append
 
 
 
