final answer: each msg gets its own context

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -14,14 +14,14 @@ steps:
   commands: |
         msg="Amber gold check FAILED. This is not fatal. But it really should be fixed.<br/>"
         echo "++ $$msg"
-        echo "$$msg" | buildkite-agent annotate --style "error" --context amber --append
+        echo "$$msg" | buildkite-agent annotate --style "error" --context amber
 
 
 - label: "TEST2"
   commands: |
         msg="TEST2 gold check FAILED. This is not fatal. But it really should be fixed.<br/>"
         echo "++ $$msg"
-        echo "$$msg" | buildkite-agent annotate --style "error" --context amber --append
+        echo "$$msg" | buildkite-agent annotate --style "error" --context test2
 
 
 
