try out conv1_sparse

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -226,7 +226,24 @@ steps:
     else
       echo "Trigger came from aha repo; use default config";
     fi;
-  - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+
+  #
+  #
+  #
+  #
+  #
+  #
+  # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+  # - aha regress conv1_dense --include-dense-only-tests
+  - aha regress conv1_sparse
+  #
+  #
+  #
+  #
+  #
+  #
+  #
+
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
