trying conv2 dense again

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -207,7 +207,8 @@ steps:
   #
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
   # - aha regress conv1_dense --include-dense-only-tests
-  - aha regress conv1_sparse
+  # - aha regress conv1_sparse  # this worked, see aha-flow build 10120
+  - aha regress conv2_dense
   #
   #
   #
