--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -193,8 +193,8 @@ steps:
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
   # - aha regress conv1_dense --include-dense-only-tests
   # - aha regress conv1_sparse  # this worked, see aha-flow build 10120
-  - aha regress quickquick
-  # - aha regress conv2_dense
+  # - aha regress quickquick
+  - aha regress conv2_dense  # (hardwired include-dense on the regress.py conv2_dense side...)
   #
   #
   #
