--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -184,24 +184,20 @@ steps:
       echo "Trigger came from aha repo; use default config";
     fi;
 
-  #
-  #
-  #
-  #
-  #
-  #
+
+
+
+  # ORIGINAL:
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+
+  # EXPERIMENTS:
+  - aha regress quickquick
   # - aha regress conv1_dense --include-dense-only-tests
   # - aha regress conv1_sparse  # this worked, see aha-flow build 10120
-  # - aha regress quickquick
-  - aha regress conv2_dense  # (hardwired include-dense on the regress.py conv2_dense side...)
-  #
-  #
-  #
-  #
-  #
-  #
-  #
+  # - aha regress conv2_dense  # (hardwired include-dense on the regress.py conv2_dense side...)
+
+
+
 
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
