this one should fail LOUDLY not silently

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -227,7 +227,7 @@ steps:
       echo "Trigger came from aha repo; use default config";
     fi;
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
-  - aha regress pr --daemon auto --include-dense-only-tests
+  - aha regress pr --daemon auto --include-dense-only-tests || exit 13
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
